--- a/css/index.css
+++ b/css/index.css
@@ -63,12 +63,13 @@ textarea {
     font-weight: 300;
     font-size: 16px;
     background: inherit;
-    border: 2px solid black;
+    border: 1px solid black;
+    border-radius: 3px;
 }
 
 input {
     border: none;
-    border-bottom: 2px solid black;
+    border-bottom: 1px solid black;
     padding: 0.5em;
 }
 
